Update app build.gradle configuration
Changes:
- Updated Java and Kotlin version to 17
- Added proper plugin configurations
- Updated dependency versions
- Added build features configuration
- Fixed signing config
- Added proper build types

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,7 +20,6 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
-    // Different API URLs for different build types
     buildTypes {
         debug {
             buildConfigField "String", "API_BASE_URL", "\"https://dev-api.yourdomain.com/\""
@@ -34,6 +33,7 @@ android {
             minifyEnabled true
             shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
         }
     }
 
