--- a/gradle.properties
+++ b/gradle.properties
@@ -1,19 +1,37 @@
 # Project-wide Gradle settings
-org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
-# AndroidX package structure to make it clearer which packages are bundled with the
-# Android operating system, and which are packaged with your app's APK
+org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8 -XX:+UseParallelGC
+
+# AndroidX package structure
 android.useAndroidX=true
-# Kotlin code style for this project: "official" or "obsolete":
+
+# Kotlin code style
 kotlin.code.style=official
+
 # Enable R8 full mode
 android.enableR8.fullMode=true
+
 # Enable BuildConfig generation
 android.defaults.buildfeatures.buildconfig=true
-# Enable parallel execution
+
+# Gradle optimizations
 org.gradle.parallel=true
+org.gradle.caching=true
+org.gradle.configureondemand=true
+
 # Enable configuration cache
 org.gradle.configuration-cache=true
-# Enable build cache
-org.gradle.caching=true
-# Set custom Gradle cache directory
-org.gradle.cache.dir=${rootDir}/.gradle/cache
+org.gradle.configuration-cache.problems=warn
+
+# Enable file system watching
+org.gradle.vfs.watch=true
+
+# Kapt optimizations
+kapt.incremental.apt=true
+kapt.use.worker.api=true
+
+# Android build features
+android.nonTransitiveRClass=true
+android.enableJetifier=false
+
+# Custom cache directory to avoid path length issues
+org.gradle.cache.dir=.gradle/cache
