--- a/settings.gradle
+++ b/settings.gradle
@@ -1,18 +1,31 @@
 pluginManagement {
     repositories {
+        gradlePluginPortal()
         google()
         mavenCentral()
-        gradlePluginPortal()
     }
 }
 
 dependencyResolutionManagement {
-    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
+    repositoriesMode.set(RepositoriesMode.PREFER_SETTINGS)
     repositories {
         google()
         mavenCentral()
+        gradlePluginPortal()
+        maven { url 'https://jitpack.io' }
     }
 }
 
 rootProject.name = "The_Dressden"
 include ':app'
+
+// Enable configuration caching
+gradle.startParameter.configurationCache = true
+
+// Enable build caching
+buildCache {
+    local {
+        directory = new File(rootDir, '.gradle/cache')
+        removeUnusedEntriesAfterDays = 30
+    }
+}
