Update Gradle configuration for better compatibility
Changes:
- Simplified version management in settings.gradle
- Updated build.gradle to use ext properties
- Removed version catalogs for better Gradle 8.9 compatibility
- Added proper plugin version management
- Fixed repository configuration
- Improved build cache settings

--- a/build.gradle
+++ b/build.gradle
@@ -5,10 +5,10 @@ buildscript {
         gradlePluginPortal()
     }
     dependencies {
-        classpath libs.plugins.android.application.get().pluginId
-        classpath libs.plugins.kotlin.android.get().pluginId
-        classpath libs.plugins.google.services.get().pluginId
-        classpath libs.plugins.firebase.crashlytics.get().pluginId
+        classpath rootProject.ext.plugins.android
+        classpath rootProject.ext.plugins.kotlin
+        classpath rootProject.ext.plugins.googleServices
+        classpath rootProject.ext.plugins.firebaseCrashlytics
     }
 }
 
