--- a/settings.gradle
+++ b/settings.gradle
@@ -19,12 +19,8 @@ dependencyResolutionManagement {
 rootProject.name = "The_Dressden"
 include ':app'
 
-// Define versions
-ext {
-    androidGradlePlugin = '8.2.0'
-    kotlinVersion = '1.9.22'
-    googleServicesVersion = '4.4.0'
-    firebaseCrashlyticsVersion = '2.9.9'
+gradle {
+    startParameter.configurationCache = true
 }
 
 // Configure build cache
