--- a/settings.gradle
+++ b/settings.gradle
@@ -4,6 +4,13 @@ pluginManagement {
         mavenCentral()
         gradlePluginPortal()
     }
+    resolutionStrategy {
+        eachPlugin {
+            if (requested.id.id == 'com.google.devtools.ksp') {
+                useModule("com.google.devtools.ksp:com.google.devtools.ksp.gradle.plugin:1.9.22-1.0.17")
+            }
+        }
+    }
 }
 
 dependencyResolutionManagement {
@@ -12,6 +19,13 @@ dependencyResolutionManagement {
         google()
         mavenCentral()
         maven { url 'https://jitpack.io' }
+    }
+    versionCatalogs {
+        libs {
+            version('kotlin', '1.9.22')
+            version('agp', '8.3.0')
+            version('ksp', '1.9.22-1.0.17')
+        }
     }
 }
 
