Updated Gradle version and Android Gradle Plugin version

--- a/gradle.properties
+++ b/gradle.properties
@@ -19,9 +19,9 @@ org.gradle.parallel=true
 org.gradle.caching=true
 org.gradle.configureondemand=true
 
-# Enable configuration cache
-org.gradle.configuration-cache=true
-org.gradle.configuration-cache.problems=warn
+# Disable configuration cache temporarily
+# org.gradle.configuration-cache=true
+# org.gradle.configuration-cache.problems=warn
 
 # Enable file system watching
 org.gradle.vfs.watch=true
