--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,7 +49,7 @@ android {
     buildFeatures {
         viewBinding true
         dataBinding true
-        buildConfig true
+        buildConfig true    // Updated configuration for BuildConfig generation
     }
     
     lint {
