--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id 'com.google.gms.google-services'
     id 'com.google.firebase.crashlytics'
     id 'kotlin-kapt'
+    id 'dagger.hilt.android.plugin'
     id 'com.google.devtools.ksp'
 }
 
@@ -19,6 +20,17 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        // Enable Room schema export
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments += [
+                    "room.schemaLocation": "$projectDir/schemas".toString(),
+                    "room.incremental": "true",
+                    "room.expandProjection": "true"
+                ]
+            }
+        }
     }
 
     buildTypes {
@@ -49,7 +61,7 @@ android {
     buildFeatures {
         viewBinding true
         dataBinding true
-        buildConfig true    // Updated configuration for BuildConfig generation
+        buildConfig true
     }
     
     lint {
@@ -68,6 +80,16 @@ android {
             '-opt-in=kotlin.RequiresOptIn',
             '-Xjvm-default=all'
         ]
+    }
+
+    // Enable Kapt incremental processing
+    kapt {
+        correctErrorTypes true
+        useBuildCache true
+        arguments {
+            arg("dagger.fastInit", "true")
+            arg("dagger.formatGeneratedSource", "disabled")
+        }
     }
 }
 
@@ -88,12 +110,17 @@ dependencies {
     implementation 'androidx.activity:activity-ktx:1.8.2'
     implementation 'androidx.fragment:fragment-ktx:1.6.2'
     
+    // WorkManager
+    implementation "androidx.work:work-runtime-ktx:2.9.0"
+    implementation "androidx.work:work-gcm:2.9.0"
+    
     // Firebase
     implementation platform('com.google.firebase:firebase-bom:32.7.1')
     implementation 'com.google.firebase:firebase-auth-ktx'
     implementation 'com.google.firebase:firebase-database-ktx'
     implementation 'com.google.firebase:firebase-crashlytics-ktx'
     implementation 'com.google.firebase:firebase-analytics-ktx'
+    implementation 'com.google.firebase:firebase-storage-ktx'
     
     // Networking
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
@@ -110,15 +137,18 @@ dependencies {
     
     // Room Database
     implementation 'androidx.room:room-runtime:2.6.1'
-    kapt 'androidx.room:room-compiler:2.6.1'
     implementation 'androidx.room:room-ktx:2.6.1'
+    kapt 'androidx.room:room-compiler:2.6.1'
 
     // Timber for logging
     implementation 'com.jakewharton.timber:timber:5.0.1'
 
     // Hilt for dependency injection
-    implementation 'com.google.dagger:hilt-android:2.50'
-    kapt 'com.google.dagger:hilt-compiler:2.50'
+    implementation "com.google.dagger:hilt-android:$rootProject.hiltVersion"
+    implementation 'androidx.hilt:hilt-work:1.1.0'
+    kapt "com.google.dagger:hilt-android-compiler:$rootProject.hiltVersion"
+    kapt 'androidx.hilt:hilt-compiler:1.1.0'
+    implementation 'androidx.hilt:hilt-navigation-fragment:1.1.0'
     
     // Testing
     testImplementation 'junit:junit:4.13.2'
