--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,8 @@ buildscript {
         kotlinVersion = '1.9.22'
         googleServicesVersion = '4.4.1'
         firebaseCrashlyticsVersion = '2.9.9'
+        hiltVersion = '2.50'
+        kspVersion = '1.9.22-1.0.17'
     }
     
     repositories {
@@ -16,11 +18,13 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
         classpath "com.google.gms:google-services:$googleServicesVersion"
         classpath "com.google.firebase:firebase-crashlytics-gradle:$firebaseCrashlyticsVersion"
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hiltVersion"
+        classpath "com.google.devtools.ksp:com.google.devtools.ksp.gradle.plugin:$kspVersion"
     }
 }
 
 // Set JDK compatibility for all projects
-allprojects {
+subprojects {
     tasks.withType(JavaCompile).configureEach {
         sourceCompatibility = JavaVersion.VERSION_17
         targetCompatibility = JavaVersion.VERSION_17
