Fix Room database annotations and build configuration

--- a/.gitignore
+++ b/.gitignore
@@ -8,37 +8,9 @@
 .externalNativeBuild
 .cxx
 local.properties
-release.keystore
-
-# Generated files
-bin/
-gen/
-out/
-
-# Gradle files
-.gradle/
-build/
-
-# Local configuration file (sdk path, etc)
-local.properties
-
-# Android Studio
-*.iml
+*.log
+/app/build/
+/app/release/
+/app/debug/
 .idea/
-.idea/workspace.xml
-.idea/tasks.xml
-.idea/gradle.xml
-.idea/assetWizardSettings.xml
-.idea/dictionaries
-.idea/libraries
-.idea/caches
-
-# Keystore files
-*.jks
-*.keystore
-
-# Google Services (e.g. APIs or Firebase)
-google-services.json
-
-# Android Profiling
 *.hprof
