--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,8 @@
 buildscript {
     ext {
-        androidGradlePlugin = '8.8.0'
+        androidGradlePlugin = '8.2.0'
         kotlinVersion = '1.9.22'
-        googleServicesVersion = '4.4.1'
+        googleServicesVersion = '4.4.0'
         firebaseCrashlyticsVersion = '2.9.9'
         hiltVersion = '2.50'
         kspVersion = '1.9.22-1.0.17'
@@ -23,6 +23,13 @@ buildscript {
     }
 }
 
+allprojects {
+    repositories {
+        google()
+        mavenCentral()
+    }
+}
+
 // Set JDK compatibility for all projects
 subprojects {
     tasks.withType(JavaCompile).configureEach {
@@ -40,28 +47,6 @@ subprojects {
     }
 }
 
-// Configure Gradle cache settings
-gradle.projectsLoaded {
-    rootProject.allprojects {
-        buildDir = layout.buildDirectory.dir("${rootProject.buildDir}/${project.name}").get().asFile
-    }
-}
-
-// Clean up old cache directories
-tasks.register('cleanCache') {
-    doLast {
-        def cacheDir = new File(gradle.gradleUserHomeDir, 'caches')
-        if (cacheDir.exists()) {
-            cacheDir.eachDir { dir ->
-                try {
-                    if (dir.name != '8.9') {
-                        dir.deleteDir()
-                        println "Deleted old cache directory: ${dir.name}"
-                    }
-                } catch (Exception e) {
-                    println "Failed to delete directory ${dir.name}: ${e.message}"
-                }
-            }
-        }
-    }
+tasks.register('clean', Delete) {
+    delete rootProject.buildDir
 }
