--- a/settings.gradle
+++ b/settings.gradle
@@ -1,16 +1,8 @@
 pluginManagement {
     repositories {
-        gradlePluginPortal()
         google()
         mavenCentral()
-    }
-    plugins {
-        id 'com.android.application' version '8.8.0'
-        id 'org.jetbrains.kotlin.android' version '1.9.22'
-        id 'com.google.devtools.ksp' version '1.9.22-1.0.17'
-        id 'com.google.gms.google-services' version '4.4.1'
-        id 'com.google.firebase.crashlytics' version '2.9.9'
-        id 'com.google.dagger.hilt.android' version '2.50'
+        gradlePluginPortal()
     }
 }
 
@@ -22,5 +14,5 @@ dependencyResolutionManagement {
     }
 }
 
-rootProject.name = "The_Dressden"
+rootProject.name = "The Dressden"
 include ':app'
