--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,6 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'com.google.gms.google-services'
     id 'com.google.firebase.crashlytics'
-    id 'kotlin-kapt'
     id 'dagger.hilt.android.plugin'
     id 'com.google.devtools.ksp'
 }
@@ -15,7 +14,7 @@ android {
     defaultConfig {
         applicationId "com.example.advancedandroidapp"
         minSdk 24
-        targetSdk 33
+        targetSdk 34
         versionCode 1
         versionName "1.0"
 
@@ -74,16 +73,10 @@ android {
         ]
     }
 
-    kapt {
-        correctErrorTypes true
-        useBuildCache true
-        arguments {
-            arg("room.schemaLocation", "$projectDir/schemas")
-            arg("room.incremental", "true")
-            arg("room.expandProjection", "true")
-            arg("dagger.fastInit", "true")
-            arg("dagger.formatGeneratedSource", "disabled")
-        }
+    ksp {
+        arg("room.schemaLocation", "$projectDir/schemas")
+        arg("room.incremental", "true")
+        arg("room.expandProjection", "true")
     }
 }
 
@@ -108,7 +101,7 @@ dependencies {
     def room_version = "2.6.1"
     implementation "androidx.room:room-runtime:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
-    kapt "androidx.room:room-compiler:$room_version"
+    ksp "androidx.room:room-compiler:$room_version"
     
     // WorkManager
     implementation "androidx.work:work-runtime-ktx:2.9.0"
@@ -141,8 +134,8 @@ dependencies {
     // Hilt for dependency injection
     implementation "com.google.dagger:hilt-android:$rootProject.hiltVersion"
     implementation 'androidx.hilt:hilt-work:1.1.0'
-    kapt "com.google.dagger:hilt-android-compiler:$rootProject.hiltVersion"
-    kapt 'androidx.hilt:hilt-compiler:1.1.0'
+    ksp "com.google.dagger:hilt-android-compiler:$rootProject.hiltVersion"
+    ksp 'androidx.hilt:hilt-compiler:1.1.0'
     implementation 'androidx.hilt:hilt-navigation-fragment:1.1.0'
     
     // Testing
