--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,6 +77,8 @@ android {
         arg("room.schemaLocation", "$projectDir/schemas")
         arg("room.incremental", "true")
         arg("room.expandProjection", "true")
+        arg("dagger.fastInit", "true")
+        arg("dagger.formatGeneratedSource", "disabled")
     }
 }
 
@@ -134,9 +136,12 @@ dependencies {
     // Hilt for dependency injection
     implementation "com.google.dagger:hilt-android:$rootProject.hiltVersion"
     implementation 'androidx.hilt:hilt-work:1.1.0'
+    implementation 'androidx.hilt:hilt-navigation-fragment:1.1.0'
     ksp "com.google.dagger:hilt-android-compiler:$rootProject.hiltVersion"
     ksp 'androidx.hilt:hilt-compiler:1.1.0'
-    implementation 'androidx.hilt:hilt-navigation-fragment:1.1.0'
+    
+    // Annotation Processing
+    implementation 'androidx.annotation:annotation:1.7.1'
     
     // Testing
     testImplementation 'junit:junit:4.13.2'
