--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ buildscript {
     ext {
         androidGradlePlugin = '8.8.0'  // Updated to be compatible with Gradle 8.10.2
         kotlinVersion = '1.9.22'
-        googleServicesVersion = '4.4.0'
+        googleServicesVersion = '4.4.2' // Updated to latest version
         firebaseCrashlyticsVersion = '2.9.9'
         hiltVersion = '2.50'
         kspVersion = '1.9.22-1.0.17'
@@ -21,6 +21,10 @@ buildscript {
         classpath "com.google.dagger:hilt-android-gradle-plugin:$hiltVersion"
         classpath "com.google.devtools.ksp:com.google.devtools.ksp.gradle.plugin:$kspVersion"
     }
+}
+
+plugins {
+    id 'com.google.gms.google-services' version '4.4.2' apply false
 }
 
 tasks.register('clean', Delete) {
