Fix build issues:
- Update UserDao to use @Relation instead of Map return type
- Fix Kotlin version incompatibility with Firebase
- Update build.gradle files for better dependency management
- Add allprojects repository configuration

--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ buildscript {
     ext {
         androidGradlePlugin = '8.8.0'  // Updated to be compatible with Gradle 8.10.2
         kotlinVersion = '1.9.22'
-        googleServicesVersion = '4.4.2' // Updated to latest version
+        googleServicesVersion = '4.4.2'
         firebaseCrashlyticsVersion = '2.9.9'
         hiltVersion = '2.50'
         kspVersion = '1.9.22-1.0.17'
@@ -23,8 +23,11 @@ buildscript {
     }
 }
 
-plugins {
-    id 'com.google.gms.google-services' version '4.4.2' apply false
+allprojects {
+    repositories {
+        google()
+        mavenCentral()
+    }
 }
 
 tasks.register('clean', Delete) {
