--- a/app/build.gradle
+++ b/app/build.gradle
@@ -110,8 +110,8 @@ dependencies {
     implementation "androidx.work:work-runtime-ktx:2.9.0"
     implementation "androidx.work:work-gcm:2.9.0"
     
-    // Firebase
-    implementation platform('com.google.firebase:firebase-bom:33.9.0')
+    // Firebase - Using BoM for version management
+    implementation platform('com.google.firebase:firebase-bom:32.7.1')
     implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation 'com.google.firebase:firebase-auth-ktx'
     implementation 'com.google.firebase:firebase-database-ktx'
