--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,13 +33,13 @@ android {
 
     buildTypes {
         debug {
-            buildConfigField "String", "API_BASE_URL", "\"https://dev-api.yourdomain.com/\""
+            buildConfigField "String", "API_BASE_URL", "\"${Constants.BASE_URL}${Constants.API_VERSION}/\""
             manifestPlaceholders = [
                 MAPS_API_KEY: "@string/maps_api_key"
             ]
         }
         release {
-            buildConfigField "String", "API_BASE_URL", "\"https://api.yourdomain.com/\""
+            buildConfigField "String", "API_BASE_URL", "\"${Constants.BASE_URL}${Constants.API_VERSION}/\""
             minifyEnabled true
             shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
