fix: Update Gradle cache directory path
- Move Gradle cache to build/.gradle-cache to avoid path length issues
- Fix UncheckedIOException during cache operations

--- a/gradle.properties
+++ b/gradle.properties
@@ -33,4 +33,4 @@ kapt.use.worker.api=true
 android.nonTransitiveRClass=true
 
 # Custom cache directory to avoid path length issues
-org.gradle.cache.dir=.gradle/cache
+org.gradle.cache.dir=build/.gradle-cache
