fix: Update Gradle configuration for better cache handling
- Add comprehensive Gradle cache settings
- Configure Java compilation options
- Update clean task to handle cache directories
- Disable unsafe configuration cache
- Optimize memory and parallel execution settings

--- a/build.gradle
+++ b/build.gradle
@@ -32,4 +32,13 @@ allprojects {
 
 tasks.register('clean', Delete) {
     delete rootProject.buildDir
+    delete "${rootProject.projectDir}/build"
+    delete "${rootProject.projectDir}/build/gradle-cache"
+}
+
+allprojects {
+    tasks.withType(JavaCompile) {
+        options.fork = true
+        options.incremental = true
+    }
 }
