--- a/gradle.properties
+++ b/gradle.properties
@@ -32,5 +32,13 @@ kapt.use.worker.api=true
 # Android build features
 android.nonTransitiveRClass=true
 
-# Custom cache directory to avoid path length issues
-org.gradle.cache.dir=build/.gradle-cache
+# Gradle cache settings
+org.gradle.caching=true
+org.gradle.parallel=true
+org.gradle.daemon=true
+org.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+org.gradle.workers.max=4
+
+# Custom cache directory
+org.gradle.cache.dir=build/gradle-cache
+org.gradle.unsafe.configuration-cache=false
