--- a/gradle.properties
+++ b/gradle.properties
@@ -32,13 +32,26 @@ kapt.use.worker.api=true
 # Android build features
 android.nonTransitiveRClass=true
 
-# Gradle cache settings
-org.gradle.caching=true
-org.gradle.parallel=true
+# Gradle performance settings
 org.gradle.daemon=true
-org.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
-org.gradle.workers.max=4
+org.gradle.parallel=true
+org.gradle.configureondemand=true
+org.gradle.jvmargs=-Xmx4g -XX:MaxPermSize=2048m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8 -XX:+UseParallelGC
+org.gradle.workers.max=8
 
-# Custom cache directory
-org.gradle.cache.dir=build/gradle-cache
+# Cache settings
+org.gradle.caching=true
 org.gradle.unsafe.configuration-cache=false
+org.gradle.cache.cleanup=false
+
+# Custom paths
+org.gradle.cache.dir=.gradle-cache
+org.gradle.wrapper.dir=.gradle-wrapper
+
+# Build cache
+android.enableBuildCache=true
+android.buildCacheDir=.android-cache
+
+# Kotlin settings
+kotlin.incremental=true
+kotlin.incremental.useClasspathSnapshot=true
