fix: Simplify Gradle configuration to resolve build failures

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 # Project-wide Gradle settings
-org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8 -XX:+UseParallelGC
+org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 
 # AndroidX package structure
 android.useAndroidX=true
@@ -8,50 +8,13 @@ android.enableJetifier=false
 # Kotlin code style
 kotlin.code.style=official
 
-# Enable R8 full mode
-android.enableR8.fullMode=true
-
-
-
-# Gradle optimizations
+# Basic Gradle optimizations
 org.gradle.parallel=true
+org.gradle.daemon=true
 org.gradle.caching=true
-org.gradle.configureondemand=true
-
-# Disable configuration cache temporarily
-# org.gradle.configuration-cache=true
-# org.gradle.configuration-cache.problems=warn
-
-# Enable file system watching
-org.gradle.vfs.watch=true
-
-# Kapt optimizations
-kapt.incremental.apt=true
-kapt.use.worker.api=true
 
 # Android build features
 android.nonTransitiveRClass=true
 
-# Gradle performance settings
-org.gradle.daemon=true
-org.gradle.parallel=true
-org.gradle.configureondemand=true
-org.gradle.jvmargs=-Xmx4g -XX:MaxPermSize=2048m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8 -XX:+UseParallelGC
-org.gradle.workers.max=8
-
-# Cache settings
-org.gradle.caching=true
-org.gradle.unsafe.configuration-cache=false
-org.gradle.cache.cleanup=false
-
-# Custom paths
-org.gradle.cache.dir=.gradle-cache
-org.gradle.wrapper.dir=.gradle-wrapper
-
-# Build cache
-android.enableBuildCache=true
-android.buildCacheDir=.android-cache
-
-# Kotlin settings
-kotlin.incremental=true
-kotlin.incremental.useClasspathSnapshot=true
+# Disable configuration cache until issues are resolved
+org.gradle.configuration-cache=false
