--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,6 @@
 # Project-wide Gradle settings
 org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
+org.gradle.java.home=C:/Program Files/Java/jdk-17
 
 # AndroidX package structure
 android.useAndroidX=true
