--- a/build.gradle
+++ b/build.gradle
@@ -1,28 +1,43 @@
 buildscript {
     ext {
-        androidGradlePlugin = '8.8.0'  // Updated to be compatible with Gradle 8.10.2
+        androidGradlePlugin = '8.2.1'  // Updated to latest stable version
         kotlinVersion = '1.9.22'
-        googleServicesVersion = '4.4.2'
+        googleServicesVersion = '4.4.0'
         firebaseCrashlyticsVersion = '2.9.9'
         hiltVersion = '2.50'
         kspVersion = '1.9.22-1.0.17'
     }
-    
-    repositories {
-        google()
-        mavenCentral()
-        gradlePluginPortal()
-    }
-    dependencies {
-        classpath "com.android.tools.build:gradle:$androidGradlePlugin"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
-        classpath "com.google.gms:google-services:$googleServicesVersion"
-        classpath "com.google.firebase:firebase-crashlytics-gradle:$firebaseCrashlyticsVersion"
-        classpath "com.google.dagger:hilt-android-gradle-plugin:$hiltVersion"
-        classpath "com.google.devtools.ksp:com.google.devtools.ksp.gradle.plugin:$kspVersion"
-    }
+}
+
+plugins {
+    id 'com.android.application' version "$androidGradlePlugin" apply false
+    id 'com.android.library' version "$androidGradlePlugin" apply false
+    id 'org.jetbrains.kotlin.android' version "$kotlinVersion" apply false
+    id 'com.google.dagger.hilt.android' version "$hiltVersion" apply false
+    id 'com.google.devtools.ksp' version "$kspVersion" apply false
+    id 'com.google.gms.google-services' version "$googleServicesVersion" apply false
+    id 'com.google.firebase.crashlytics' version "$firebaseCrashlyticsVersion" apply false
 }
 
 tasks.register('clean', Delete) {
     delete rootProject.buildDir
+}
+
+// Ensure Java 17 compatibility
+subprojects {
+    afterEvaluate { project ->
+        if (project.hasProperty('android')) {
+            android {
+                compileOptions {
+                    sourceCompatibility = JavaVersion.VERSION_17
+                    targetCompatibility = JavaVersion.VERSION_17
+                }
+            }
+            tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
+                kotlinOptions {
+                    jvmTarget = '17'
+                }
+            }
+        }
+    }
 }
