--- a/gradle.properties
+++ b/gradle.properties
@@ -1,21 +1,23 @@
 # Project-wide Gradle settings
-org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
-org.gradle.java.home=C:/Program Files/Java/jdk-17
+org.gradle.jvmargs=-Xmx4096m -XX:MaxPermSize=1024m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8 -XX:+UseParallelGC
+org.gradle.daemon=true
+org.gradle.parallel=true
+org.gradle.configureondemand=true
+org.gradle.caching=true
 
 # AndroidX package structure
 android.useAndroidX=true
 android.enableJetifier=false
+android.nonTransitiveRClass=true
 
 # Kotlin code style
 kotlin.code.style=official
-
-# Basic Gradle optimizations
-org.gradle.parallel=true
-org.gradle.daemon=true
-org.gradle.caching=true
-
-# Android build features
-android.nonTransitiveRClass=true
+kotlin.incremental=true
+kotlin.incremental.useClasspathSnapshot=true
 
 # Disable configuration cache until issues are resolved
 org.gradle.configuration-cache=false
+
+# Enable build config feature by default
+android.defaults.buildfeatures.buildconfig=true
+android.nonFinalResIds=false
