fix: Update Gradle memory settings
- Remove unsupported MaxPermSize option
- Optimize memory allocation
- Configure worker pool size
- Update cache settings

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 # Project-wide Gradle settings
-org.gradle.jvmargs=-Xmx4096m -XX:MaxPermSize=1024m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8 -XX:+UseParallelGC
+org.gradle.jvmargs=-Xmx4096m -Dfile.encoding=UTF-8 -XX:+HeapDumpOnOutOfMemoryError -XX:+UseParallelGC
 org.gradle.daemon=true
 org.gradle.parallel=true
 org.gradle.configureondemand=true
@@ -21,3 +21,7 @@ org.gradle.configuration-cache=false
 # Enable build config feature by default
 android.defaults.buildfeatures.buildconfig=true
 android.nonFinalResIds=false
+
+# Memory settings
+org.gradle.workers.max=8
+org.gradle.unsafe.configuration-cache=false
