--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext {
-        androidGradlePlugin = '8.2.1'  // Updated to latest stable version
+        androidGradlePlugin = '8.2.1'
         kotlinVersion = '1.9.22'
         googleServicesVersion = '4.4.0'
         firebaseCrashlyticsVersion = '2.9.9'
