--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 # Project-wide Gradle settings
-org.gradle.jvmargs=-Xmx4096m -Dfile.encoding=UTF-8 -XX:+HeapDumpOnOutOfMemoryError -XX:+UseParallelGC
+org.gradle.jvmargs=-Xmx4096m -Dfile.encoding=UTF-8 -XX:+UseParallelGC
 org.gradle.daemon=true
 org.gradle.parallel=true
 org.gradle.configureondemand=true
@@ -25,3 +25,6 @@ android.nonFinalResIds=false
 # Memory settings
 org.gradle.workers.max=8
 org.gradle.unsafe.configuration-cache=false
+
+# Android SDK Configuration
+android.sdk.channel=stable
